--- a/index.html
+++ b/index.html
@@ -16,24 +16,26 @@
 </head>
 
 <body>
-	<header>
-		<div class="logo"><img src="assets/images/avatar.jpg" id="avatar"></div>
-		<div class="header-content">
-			<div class="header-name">
-				<h1>Adam Dziuk</h1>
-			</div>
-			<div class="header-description">
-				<p>Web Developer. Dev Bootcamp Graduate. Aspiring Musician and Photographer. I strive to create well-tested, meaningful code. What can we build together?</p>
-			</div>
-			<div class="header-contact">
-				<ul>
-					<li><a href="https://www.linkedin.com/in/amdziuk" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
-					<li><a href="https://github.com/amdziuk" target="_blank"><i class="fa fa-git-square"></i></a></li>
-					<li><a href="mailto:amdziuk@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="divider"></div>
-	</header>
+  <header>
+    <div class="header-container">
+      <div class="logo"><img src="assets/images/avatar.jpg" id="avatar"></div>
+      <div class="header-content">
+        <div class="header-name">
+          <h1>Adam Dziuk</h1>
+        </div>
+        <div class="header-description">
+          <p>Web Developer. Dev Bootcamp Graduate. Aspiring Musician and Photographer. I strive to create well-tested, meaningful code. What can we build together?</p>
+        </div>
+        <div class="header-contact">
+          <ul>
+            <li><a href="https://www.linkedin.com/in/amdziuk" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+            <li><a href="https://github.com/amdziuk" target="_blank"><i class="fa fa-git-square"></i></a></li>
+            <li><a href="mailto:amdziuk@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="divider"></div>
+  </header>
 </body>
 </html>
