Namespaced it, better practices

--- a/lyft/index.html
+++ b/lyft/index.html
@@ -22,7 +22,7 @@
         Driver B Origin: <input type="text" name="bOriginLat" placeholder="Latitude"><input type="text" name="bOriginLong" placeholder="Longitude"><br>
         Driver B Destin: <input type="text" name="bDestLat" placeholder="Latitude"><input type="text" name="bDestLong" placeholder="Longitude"><br>
         </form>
-        <p><button type="button" onclick="calculateDistances();">Calculate
+        <p><button type="button" onclick="myRouter.calculateDistances();">Calculate
           distances</button></p>
       </div>
       <div id="outputDiv"></div>
