Added a few changes to reflect my official job title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Adam Dziuk - Web Developer</title>
+  <title>Adam Dziuk - Software Engineer</title>
   <meta name="description" content="Personal Portfolio for Adam Dziuk">
   <meta name="author" content="Adam Dziuk">
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -24,7 +24,7 @@
           <h1>Adam Dziuk</h1>
         </div>
         <div class="header-description">
-          <p>Web Developer. Dev Bootcamp Graduate. Aspiring Musician and Photographer. I strive to create well-tested, meaningful code. What can we build together?</p>
+          <p>Software Engineer. Dev Bootcamp Graduate. Aspiring Musician and Photographer. I strive to create well-tested, meaningful code. What can we build together?</p>
         </div>
         <div class="header-contact">
           <ul>
