--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
             <img src="images/avatar.jpg" id="avatar">
             <h1>Adam Dziuk</h1>
             <h2>Software Engineer</h2>
-            <!-- TODO: Add resume here -->
-            <!--<a href="#" class="btn-rounded-white">Download Resume</a>-->
-
+            <a href="pdf/AdamDziuk-Resume2017.pdf" target="_blank" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
