--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <img src="images/avatar.jpg" id="avatar">
             <h1>Adam Dziuk</h1>
             <h2>Software Engineer</h2>
-            <a href="pdf/AdamDziuk-Resume2017.pdf" target="_blank" class="btn-rounded-white">Download Resume</a>
+            <a href="pdf/AdamDziukResume2018.pdf" target="_blank" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -89,7 +89,35 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="Jul 2015 – Present">
+            <div data-date="May 2017 – Apr 2018">
+                <h3>SafeGraph</h3>
+                <h4>Sr. Software Engineer</h4>
+                <p>
+                    • Wrote Spark jobs that process terabytes of data daily. Areas of focus included ingesting and enhancing movement data and building maps using point-of-interest and polygon data.
+                </p>
+                <p>
+                    • Architected and built out the majority of the first customer-facing UI, including the front-end in Vue.js and API in Play Framework.
+                </p>
+                <p>
+                    • Designed and built an API with Akka for ingesting payloads from mobile SDKs.
+                </p>
+                <p>
+                    • Upon joining, refactored Spark jobs out of Databricks notebooks and into git projects for better version control.
+                </p>
+                <p>
+                    • Set up CI/CD with Jenkins and Artifactory for automating the build process of our projects.
+                </p>
+                <p>
+                    • Created a DC/OS cluster and dockerized our internal applications for easier deployment and infrastructure management.
+                </p>
+                <p>
+                    • Introduced Git Flow to the engineering team, established a release process for libraries and services, and focused on improving unit test coverage.
+                </p>
+                <p>
+                    • Extensive work in AWS with VPCs, EC2, EBS, EFS, Lambdas, API Gateway, and more.
+                </p>
+            </div>
+            <div data-date="Jul 2015 – Apr 2017">
                 <h3>Apteligent</h3>
                 <h4>Sr. Software Engineer (Data Platform Team)</h4>
                 <p>
