--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
+            <div data-date="Jan 2019 - Present">
+                <h3>Uber</h3>
+                <h4>Software Engineer</h4>
+            </div>
             <div data-date="May 2017 – Apr 2018">
                 <h3>SafeGraph</h3>
                 <h4>Sr. Software Engineer</h4>
