--- a/index.html
+++ b/index.html
@@ -98,9 +98,13 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="Mar 2020 - Present">
+            <div data-date="Feb 2022 - Present">
                 <h3>Uber</h3>
-                <h4>Sr. Software Engineer</h4>
+                <h4>Staff Software Engineer</h4>
+            </div>
+            <div data-date="Mar 2020 - Feb 2022">
+                <h3>Uber</h3>
+                <h4>Senior Software Engineer</h4>
             </div>
             <div data-date="Jan 2019 - Mar 2020">
                 <h3>Uber</h3>
